# api/edn/v1/edn.pb.validate.go
@@ -1,0 +1,467 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: api/edn/v1/edn.proto
+
+package v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on ReceiverRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *ReceiverRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ReceiverRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ReceiverRequestMultiError, or nil if none found.
+func (m *ReceiverRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ReceiverRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if m.GetChannel() != "foo" {
+		err := ReceiverRequestValidationError{
+			field:  "Channel",
+			reason: "value must equal foo",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetPhone()) != 11 {
+		err := ReceiverRequestValidationError{
+			field:  "Phone",
+			reason: "value length must be 11 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+
+	}
+
+	if err := m._validateEmail(m.GetEmail()); err != nil {
+		err = ReceiverRequestValidationError{
+			field:  "Email",
+			reason: "value must be a valid email address",
+			cause:  err,
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.GetInfo() == nil {
+		err := ReceiverRequestValidationError{
+			field:  "Info",
+			reason: "value is required",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if all {
+		switch v := interface{}(m.GetInfo()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, ReceiverRequestValidationError{
+					field:  "Info",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, ReceiverRequestValidationError{
+					field:  "Info",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetInfo()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ReceiverRequestValidationError{
+				field:  "Info",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return ReceiverRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+func (m *ReceiverRequest) _validateHostname(host string) error {
+	s := strings.ToLower(strings.TrimSuffix(host, "."))
+
+	if len(host) > 253 {
+		return errors.New("hostname cannot exceed 253 characters")
+	}
+
+	for _, part := range strings.Split(s, ".") {
+		if l := len(part); l == 0 || l > 63 {
+			return errors.New("hostname part must be non-empty and cannot exceed 63 characters")
+		}
+
+		if part[0] == '-' {
+			return errors.New("hostname parts cannot begin with hyphens")
+		}
+
+		if part[len(part)-1] == '-' {
+			return errors.New("hostname parts cannot end with hyphens")
+		}
+
+		for _, r := range part {
+			if (r < 'a' || r > 'z') && (r < '0' || r > '9') && r != '-' {
+				return fmt.Errorf("hostname parts can only contain alphanumeric characters or hyphens, got %q", string(r))
+			}
+		}
+	}
+
+	return nil
+}
+
+func (m *ReceiverRequest) _validateEmail(addr string) error {
+	a, err := mail.ParseAddress(addr)
+	if err != nil {
+		return err
+	}
+	addr = a.Address
+
+	if len(addr) > 254 {
+		return errors.New("email addresses cannot exceed 254 characters")
+	}
+
+	parts := strings.SplitN(addr, "@", 2)
+
+	if len(parts[0]) > 64 {
+		return errors.New("email address local phrase cannot exceed 64 characters")
+	}
+
+	return m._validateHostname(parts[1])
+}
+
+// ReceiverRequestMultiError is an error wrapping multiple validation errors
+// returned by ReceiverRequest.ValidateAll() if the designated constraints
+// aren't met.
+type ReceiverRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ReceiverRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ReceiverRequestMultiError) AllErrors() []error { return m }
+
+// ReceiverRequestValidationError is the validation error returned by
+// ReceiverRequest.Validate if the designated constraints aren't met.
+type ReceiverRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ReceiverRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ReceiverRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ReceiverRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ReceiverRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ReceiverRequestValidationError) ErrorName() string { return "ReceiverRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e ReceiverRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sReceiverRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ReceiverRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ReceiverRequestValidationError{}
+
+// Validate checks the field values on ReceiverReply with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *ReceiverReply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ReceiverReply with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in ReceiverReplyMultiError, or
+// nil if none found.
+func (m *ReceiverReply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ReceiverReply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Data
+
+	if len(errors) > 0 {
+		return ReceiverReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// ReceiverReplyMultiError is an error wrapping multiple validation errors
+// returned by ReceiverReply.ValidateAll() if the designated constraints
+// aren't met.
+type ReceiverReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ReceiverReplyMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ReceiverReplyMultiError) AllErrors() []error { return m }
+
+// ReceiverReplyValidationError is the validation error returned by
+// ReceiverReply.Validate if the designated constraints aren't met.
+type ReceiverReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ReceiverReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ReceiverReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ReceiverReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ReceiverReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ReceiverReplyValidationError) ErrorName() string { return "ReceiverReplyValidationError" }
+
+// Error satisfies the builtin error interface
+func (e ReceiverReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sReceiverReply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ReceiverReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ReceiverReplyValidationError{}
+
+// Validate checks the field values on ReceiverRequest_Info with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ReceiverRequest_Info) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ReceiverRequest_Info with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ReceiverRequest_InfoMultiError, or nil if none found.
+func (m *ReceiverRequest_Info) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ReceiverRequest_Info) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Address
+
+	if len(errors) > 0 {
+		return ReceiverRequest_InfoMultiError(errors)
+	}
+
+	return nil
+}
+
+// ReceiverRequest_InfoMultiError is an error wrapping multiple validation
+// errors returned by ReceiverRequest_Info.ValidateAll() if the designated
+// constraints aren't met.
+type ReceiverRequest_InfoMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ReceiverRequest_InfoMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ReceiverRequest_InfoMultiError) AllErrors() []error { return m }
+
+// ReceiverRequest_InfoValidationError is the validation error returned by
+// ReceiverRequest_Info.Validate if the designated constraints aren't met.
+type ReceiverRequest_InfoValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ReceiverRequest_InfoValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ReceiverRequest_InfoValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ReceiverRequest_InfoValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ReceiverRequest_InfoValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ReceiverRequest_InfoValidationError) ErrorName() string {
+	return "ReceiverRequest_InfoValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ReceiverRequest_InfoValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sReceiverRequest_Info.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ReceiverRequest_InfoValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ReceiverRequest_InfoValidationError{}
